--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2437,6 +2437,14 @@ input[type="radio"]:focus+label:before {
 	color: #8cc9f0;
 }
 
+.skill-icon {
+	font-size: 4.25em;
+}
+
+.mongo-icon {
+	transform: rotate(45deg);
+}
+
 @media screen and (max-width: 1680px) {
 
 	.icon.major:before {
